@@ -12,7 +12,7 @@
 <?php login_cookie_check() ?>
 <?php
 	project_access_check( $f_id );
-	check_access( DEVELOPER );
+	check_access( $g_handle_bug_threshold );
 	check_bug_exists( $f_id );
 	$c_id = (integer)$f_id;
 
